# nikmon-agent

./: CMakeLists.txt
.github/workflows/: release.yml
cmake/: CompilerOptions.cmake  FindHypodermic.cmake  FindNlohmannJson.cmake  FindPoco.cmake  Packaging.cmake  ProjectDependencies.cmake
conf/: agent.config  logger.properties
src/: CMakeLists.txt  main.cpp  version.h.in
src/app/: Application.cpp  Application.h  ServiceLocator.cpp  ServiceLocator.h
src/extractors/: AgentPingExtractor.cpp  AgentPingExtractor.h  Extractor.cpp  Extractor.h  ExtractorFactory.cpp  ExtractorFactory.h
src/extractors/linux/: LinuxExtractorFactory.cpp  LinuxExtractorFactory.h  SystemMachineInfoExtractor.cpp  SystemMachineInfoExtractor.h  SystemMemorySizeExtractor.cpp  SystemMemorySizeExtractor.h  SystemSwapSizeExtractor.cpp  SystemSwapSizeExtractor.h
src/extractors/linux/sysinfo/: MemoryInfoReader.cpp  MemoryInfoReader.h
src/modules/: ConfigurationModule.cpp  ThreadedModule.cpp  ThreadedModule.h
src/modules/communication-module/: Client.cpp  Client.h  CommunicationModule.cpp  CommunicationModule.h
src/modules/configuration-module/: ConfigurationModule.cpp  ConfigurationModule.h
src/modules/task-manager-module/: PeriodicTask.cpp  PeriodicTask.h  SingleUseTask.cpp  SingleUseTask.h  Task.cpp  Task.h  TaskManagerModule.cpp  TaskManagerModule.h
src/types/api/: Command.cpp  Command.h  CommandConfirmation.cpp  CommandConfirmation.h  RegistrationRequest.h  RegistrationResponse.h  StatusRequest.cpp  StatusRequest.h  StatusResponse.cpp  StatusResponse.h  TaskItem.h
src/types/enums/: CommandType.h  TaskFrequency.h  TaskResultStatus.h
src/unit-tests/: CMakeLists.txt  Config.cpp  Config.h  example.cpp  main.cpp
src/unit-tests/resources/: cpuinfo  meminfo
src/unit-tests/tests/: UnittestMemoryInfoReader.cpp  UnittestSystemMachineInfoExtractor.cpp
src/utils/: SyncQueue.h  Utils.h
